--- a/SmallData/Data/data.ini
+++ b/SmallData/Data/data.ini
@@ -7,279 +7,335 @@ BestWinner = 2.3.0.0
 Games = 30
 Wins = 9
 Rate = 31.03448275862069
+number = 49
 
 [2.0.2.1]
 Games = 185
 Wins = 42
 Rate = 22.82608695652174
+number = 26
 
 [3.0.0.2]
 Games = 48
 Wins = 14
 Rate = 27.659574468085108
+number = 34
 
 [1.2.2.0]
 Games = 196
 Wins = 136
 Rate = 69.23076923076923
+number = 5
 
 [2.1.0.2]
 Games = 176
 Wins = 110
 Rate = 62.28571428571429
+number = 15
 
 [1.1.1.2]
 Games = 341
 Wins = 172
 Rate = 50.588235294117645
+number = 0
 
 [1.2.0.2]
 Games = 194
 Wins = 123
 Rate = 63.212435233160626
+number = 33
 
 [1.3.0.1]
 Games = 117
 Wins = 79
 Rate = 68.10344827586206
+number = 36
 
 [0.1.2.2]
 Games = 189
 Wins = 67
 Rate = 35.638297872340424
+number = 17
 
 [1.0.1.3]
 Games = 125
 Wins = 44
 Rate = 34.67741935483871
+number = 31
 
 [0.1.1.3]
 Games = 133
 Wins = 50
 Rate = 37.121212121212125
+number = 16
 
 [1.2.1.1]
 Games = 383
 Wins = 249
 Rate = 64.92146596858639
+number = 10
 
 [3.1.1.0]
 Games = 120
 Wins = 74
 Rate = 61.34453781512605
+number = 35
 
 [0.1.3.1]
 Games = 126
 Wins = 43
 Rate = 34.4
+number = 14
 
 [1.1.2.1]
 Games = 363
 Wins = 171
 Rate = 46.96132596685083
+number = 4
 
 [1.4.0.0]
 Games = 31
 Wins = 21
 Rate = 66.66666666666666
+number = 37
 
 [1.0.4.0]
 Games = 34
 Wins = 15
 Rate = 45.45454545454545
+number = 46
 
 [2.0.1.2]
 Games = 163
 Wins = 40
 Rate = 24.691358024691358
+number = 8
 
 [3.2.0.0]
 Games = 64
 Wins = 54
 Rate = 84.12698412698413
+number = 12
 
 [2.1.1.1]
 Games = 406
 Wins = 237
 Rate = 58.51851851851851
+number = 11
 
 [4.0.0.1]
 Games = 39
 Wins = 8
 Rate = 21.052631578947366
+number = 45
 
 [2.0.3.0]
 Games = 76
 Wins = 27
 Rate = 36.0
+number = 48
 
 [0.3.0.2]
 Games = 50
 Wins = 27
 Rate = 53.06122448979592
+number = 3
 
 [4.1.0.0]
 Games = 37
 Wins = 22
 Rate = 58.333333333333336
+number = 47
 
 [0.2.1.2]
 Games = 197
 Wins = 88
 Rate = 44.89795918367347
+number = 6
 
 [0.1.4.0]
 Games = 40
 Wins = 26
 Rate = 64.1025641025641
+number = 23
 
 [0.3.2.0]
 Games = 64
 Wins = 35
 Rate = 53.96825396825397
+number = 22
 
 [4.0.1.0]
 Games = 32
 Wins = 6
 Rate = 16.129032258064516
+number = 42
 
 [0.2.3.0]
 Games = 48
 Wins = 30
 Rate = 63.829787234042556
+number = 32
 
 [2.0.0.3]
 Games = 73
 Wins = 29
 Rate = 38.88888888888889
+number = 41
 
 [2.2.0.1]
 Games = 190
 Wins = 145
 Rate = 76.71957671957672
+number = 24
 
 [1.0.3.1]
 Games = 139
 Wins = 37
 Rate = 26.811594202898554
+number = 21
 
 [1.0.2.2]
 Games = 162
 Wins = 31
 Rate = 19.25465838509317
+number = 43
 
 [3.0.1.1]
 Games = 121
 Wins = 31
 Rate = 25.833333333333336
+number = 29
 
 [2.1.2.0]
 Games = 205
 Wins = 151
 Rate = 73.52941176470588
+number = 20
 
 [1.1.0.3]
 Games = 156
 Wins = 84
 Rate = 53.5483870967742
+number = 9
 
 [2.2.1.0]
 Games = 205
 Wins = 163
 Rate = 79.41176470588235
+number = 13
 
 [3.1.0.1]
 Games = 123
 Wins = 82
 Rate = 66.39344262295081
+number = 7
 
 [1.0.0.4]
 Games = 34
 Wins = 16
 Rate = 45.45454545454545
+number = 39
 
 [0.2.2.1]
 Games = 184
 Wins = 76
 Rate = 41.53005464480874
+number = 25
 
 [3.0.2.0]
 Games = 79
 Wins = 26
 Rate = 32.05128205128205
+number = 30
 
 [0.3.1.1]
 Games = 139
 Wins = 62
 Rate = 44.20289855072464
+number = 27
 
 [0.1.0.4]
 Games = 28
 Wins = 16
 Rate = 59.25925925925925
+number = 52
 
 [1.1.3.0]
 Games = 110
 Wins = 72
 Rate = 66.05504587155964
+number = 2
 
 [0.4.0.1]
 Games = 34
 Wins = 10
 Rate = 30.303030303030305
+number = 40
 
 [0.4.1.0]
 Games = 38
 Wins = 10
 Rate = 27.027027027027028
+number = 44
 
 [2.3.0.0]
 Games = 59
 Wins = 53
 Rate = 89.65517241379311
+number = 19
 
 [1.3.1.0]
 Games = 118
 Wins = 85
 Rate = 72.64957264957265
+number = 18
 
 [0.0.2.3]
 Games = 64
 Wins = 13
 Rate = 20.634920634920633
+number = 38
 
 [0.5.0.0]
 Games = 11
 Wins = 4
 Rate = 30.0
+number = 54
 
 [0.0.3.2]
 Games = 61
 Wins = 10
 Rate = 16.666666666666664
+number = 28
 
 [5.0.0.0]
 Games = 4
 Wins = 0
 Rate = 0.0
+number = 50
 
 [0.2.0.3]
 Games = 70
 Wins = 37
 Rate = 52.17391304347826
+number = 1
 
 [0.0.5.0]
 Games = 8
 Wins = 6
 Rate = 71.42857142857143
+number = 55
 
 [0.0.4.1]
 Games = 43
 Wins = 11
 Rate = 23.809523809523807
+number = 51
 
 [0.0.0.5]
 Games = 10
 Wins = 7
 Rate = 77.77777777777779
+number = 53
 
