--- a/Gui4SmallData/.classpath
+++ b/Gui4SmallData/.classpath
@@ -3,5 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/Users/Cyber/git/Eclipse-Work-Space/Gui4SmallData/ini4j-0.5.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Cyber/git/Eclipse-Work-Space/Gui4SmallData/ini4j-0.5.4-jdk14.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
