--- a/SmallData/Data/data.ini
+++ b/SmallData/Data/data.ini
@@ -1,341 +1,285 @@
 [Base]
-Games = 3290
-BestRate = 92.85714285714286
-BestWinner = 2.3.0.0
-
-[0.0.1.4]
-Games = 30
-Wins = 9
-Rate = 31.03448275862069
-number = 49
-
-[2.0.2.1]
-Games = 185
-Wins = 42
-Rate = 22.82608695652174
-number = 26
-
-[3.0.0.2]
-Games = 48
-Wins = 14
-Rate = 27.659574468085108
-number = 34
-
-[1.2.2.0]
-Games = 196
-Wins = 136
-Rate = 69.23076923076923
-number = 5
-
-[2.1.0.2]
-Games = 178
-Wins = 112
-Rate = 62.28571428571429
-number = 15
-
-[1.1.1.2]
-Games = 342
-Wins = 172
-Rate = 50.588235294117645
-number = 0
-
-[1.2.0.2]
-Games = 194
-Wins = 123
-Rate = 63.212435233160626
-number = 33
-
-[1.3.0.1]
-Games = 117
-Wins = 79
-Rate = 68.10344827586206
-number = 36
-
-[0.1.2.2]
-Games = 189
-Wins = 67
-Rate = 35.638297872340424
-number = 17
-
-[1.0.1.3]
-Games = 125
-Wins = 44
-Rate = 34.67741935483871
-number = 31
-
-[0.1.1.3]
-Games = 133
-Wins = 50
-Rate = 37.121212121212125
-number = 16
-
-[1.2.1.1]
-Games = 383
-Wins = 249
-Rate = 64.92146596858639
-number = 10
-
-[3.1.1.0]
-Games = 120
-Wins = 74
-Rate = 61.34453781512605
-number = 35
-
-[0.1.3.1]
-Games = 126
-Wins = 43
-Rate = 34.4
-number = 14
-
-[1.1.2.1]
-Games = 363
-Wins = 171
-Rate = 46.96132596685083
-number = 4
-
-[1.4.0.0]
-Games = 31
-Wins = 21
-Rate = 66.66666666666666
-number = 37
-
-[1.0.4.0]
-Games = 34
-Wins = 15
-Rate = 45.45454545454545
-number = 46
-
-[2.0.1.2]
-Games = 163
-Wins = 40
-Rate = 24.691358024691358
-number = 8
-
-[3.2.0.0]
-Games = 64
-Wins = 54
-Rate = 84.12698412698413
-number = 12
-
-[2.1.1.1]
-Games = 406
-Wins = 237
-Rate = 58.51851851851851
-number = 11
-
-[4.0.0.1]
-Games = 39
-Wins = 8
-Rate = 21.052631578947366
-number = 45
-
-[2.0.3.0]
-Games = 76
-Wins = 27
-Rate = 36.0
-number = 48
-
-[0.3.0.2]
-Games = 50
-Wins = 27
-Rate = 53.06122448979592
-number = 3
-
-[4.1.0.0]
-Games = 37
-Wins = 22
-Rate = 58.333333333333336
-number = 47
-
-[0.2.1.2]
-Games = 198
-Wins = 88
-Rate = 44.89795918367347
-number = 6
-
-[0.1.4.0]
-Games = 40
-Wins = 26
-Rate = 64.1025641025641
-number = 23
-
-[0.3.2.0]
-Games = 64
-Wins = 35
-Rate = 53.96825396825397
-number = 22
-
-[4.0.1.0]
-Games = 32
-Wins = 6
-Rate = 16.129032258064516
-number = 42
-
-[0.2.3.0]
-Games = 48
-Wins = 30
-Rate = 63.829787234042556
-number = 32
-
-[2.0.0.3]
-Games = 73
-Wins = 29
-Rate = 38.88888888888889
-number = 41
-
-[2.2.0.1]
-Games = 190
-Wins = 145
-Rate = 76.71957671957672
-number = 24
-
-[1.0.3.1]
-Games = 139
-Wins = 37
-Rate = 26.811594202898554
-number = 21
-
-[1.0.2.2]
-Games = 162
-Wins = 31
-Rate = 19.25465838509317
-number = 43
-
-[3.0.1.1]
-Games = 122
-Wins = 31
-Rate = 25.833333333333336
-number = 29
-
-[2.1.2.0]
-Games = 206
-Wins = 152
-Rate = 73.52941176470588
-number = 20
-
-[1.1.0.3]
-Games = 157
-Wins = 84
-Rate = 53.5483870967742
-number = 9
-
-[2.2.1.0]
-Games = 206
-Wins = 164
-Rate = 79.41176470588235
-number = 13
-
-[3.1.0.1]
-Games = 123
-Wins = 82
-Rate = 66.39344262295081
-number = 7
-
-[1.0.0.4]
-Games = 34
-Wins = 16
-Rate = 45.45454545454545
-number = 39
-
-[0.2.2.1]
-Games = 184
-Wins = 76
-Rate = 41.53005464480874
-number = 25
-
-[3.0.2.0]
-Games = 79
-Wins = 26
-Rate = 32.05128205128205
-number = 30
-
-[0.3.1.1]
-Games = 139
-Wins = 62
-Rate = 44.20289855072464
-number = 27
-
-[0.1.0.4]
-Games = 28
-Wins = 16
-Rate = 59.25925925925925
-number = 52
-
-[1.1.3.0]
-Games = 110
-Wins = 72
-Rate = 66.05504587155964
-number = 2
-
-[0.4.0.1]
-Games = 34
-Wins = 10
-Rate = 30.303030303030305
-number = 40
-
-[0.4.1.0]
-Games = 38
-Wins = 10
-Rate = 27.027027027027028
-number = 44
-
-[2.3.0.0]
-Games = 59
-Wins = 53
-Rate = 89.65517241379311
-number = 19
-
-[1.3.1.0]
-Games = 118
-Wins = 85
-Rate = 72.64957264957265
-number = 18
-
-[0.0.2.3]
-Games = 64
-Wins = 13
-Rate = 20.634920634920633
-number = 38
-
-[0.5.0.0]
-Games = 11
-Wins = 4
-Rate = 30.0
-number = 54
-
-[0.0.3.2]
-Games = 61
-Wins = 10
-Rate = 16.666666666666664
-number = 28
-
-[5.0.0.0]
-Games = 4
+Games = 1153
 Wins = 0
-Rate = 0.0
-number = 50
+BestWinner = 2300
 
-[0.2.0.3]
-Games = 70
-Wins = 37
-Rate = 52.17391304347826
-number = 1
+[1112]
+Games = 127
+Wins = 50
+WinRate = 40.0
 
-[0.0.5.0]
+[1022]
+Games = 61
+Wins = 16
+WinRate = 28.07017543859649
+
+[2120]
+Games = 74
+Wins = 50
+WinRate = 68.4931506849315
+
+[1121]
+Games = 127
+Wins = 57
+WinRate = 45.23809523809524
+
+[1310]
+Games = 46
+Wins = 33
+WinRate = 73.33333333333333
+
+[2210]
+Games = 48
+Wins = 36
+WinRate = 76.59574468085107
+
+[1202]
+Games = 64
+Wins = 42
+WinRate = 65.625
+
+[3011]
+Games = 43
+Wins = 20
+WinRate = 52.63157894736842
+
+[0122]
+Games = 69
+Wins = 15
+WinRate = 22.058823529411764
+
+[0212]
+Games = 63
+Wins = 23
+WinRate = 37.704918032786885
+
+[3110]
+Games = 40
+Wins = 36
+WinRate = 92.3076923076923
+
+[2021]
+Games = 75
+Wins = 29
+WinRate = 41.42857142857143
+
+[2111]
+Games = 135
+Wins = 88
+WinRate = 65.18518518518519
+
+[1301]
+Games = 43
+Wins = 33
+WinRate = 76.74418604651163
+
+[1103]
+Games = 54
+Wins = 28
+WinRate = 51.85185185185185
+
+[0041]
+Games = 21
+Wins = 1
+WinRate = 16.666666666666664
+
+[1211]
+Games = 120
+Wins = 71
+WinRate = 59.166666666666664
+
+[3020]
+Games = 19
+Wins = 10
+WinRate = 55.55555555555556
+
+[2003]
+Games = 23
+Wins = 9
+WinRate = 40.909090909090914
+
+[0320]
+Games = 24
+Wins = 11
+WinRate = 45.83333333333333
+
+[0401]
+Games = 12
+Wins = 6
+WinRate = 50.0
+
+[1031]
+Games = 39
+Wins = 10
+WinRate = 27.77777777777778
+
+[3101]
+Games = 41
+Wins = 32
+WinRate = 78.04878048780488
+
+[0302]
+Games = 24
+Wins = 11
+WinRate = 45.83333333333333
+
+[1220]
+Games = 76
+Wins = 56
+WinRate = 73.68421052631578
+
+[2300]
+Games = 18
+Wins = 16
+WinRate = 94.11764705882352
+
+[4001]
+Games = 13
+Wins = 7
+WinRate = 58.333333333333336
+
+[0131]
+Games = 56
+Wins = 16
+WinRate = 28.57142857142857
+
+[2201]
+Games = 59
+Wins = 47
+WinRate = 79.66101694915254
+
+[4100]
+Games = 13
+Wins = 12
+WinRate = 92.3076923076923
+
+[2102]
+Games = 79
+Wins = 52
+WinRate = 65.82278481012658
+
+[3002]
+Games = 19
+Wins = 10
+WinRate = 52.63157894736842
+
+[1013]
+Games = 40
+Wins = 5
+WinRate = 13.157894736842104
+
+[0023]
+Games = 25
+Wins = 6
+WinRate = 24.0
+
+[0014]
+Games = 18
+Wins = 6
+WinRate = 35.294117647058826
+
+[0113]
+Games = 45
+Wins = 14
+WinRate = 31.11111111111111
+
+[0221]
+Games = 72
+Wins = 32
+WinRate = 44.44444444444444
+
+[2012]
+Games = 59
+Wins = 17
+WinRate = 29.310344827586203
+
+[1130]
+Games = 45
+Wins = 22
+WinRate = 48.888888888888886
+
+[0230]
+Games = 25
+Wins = 14
+WinRate = 56.00000000000001
+
+[0140]
+Games = 8
+Wins = 4
+WinRate = 50.0
+
+[0311]
+Games = 47
+Wins = 18
+WinRate = 40.909090909090914
+
+[0410]
+Games = 5
+Wins = 3
+WinRate = 60.0
+
+[3200]
+Games = 25
+Wins = 22
+WinRate = 88.0
+
+[0032]
+Games = 26
+Wins = 5
+WinRate = 20.833333333333336
+
+[4010]
+Games = 8
+Wins = 3
+WinRate = 42.857142857142854
+
+[1400]
 Games = 8
 Wins = 6
-Rate = 71.42857142857143
-number = 55
+WinRate = 75.0
 
-[0.0.4.1]
-Games = 43
-Wins = 11
-Rate = 23.809523809523807
-number = 51
+[1004]
+Games = 19
+Wins = 13
+WinRate = 68.42105263157895
 
-[0.0.0.5]
-Games = 10
-Wins = 7
-Rate = 77.77777777777779
-number = 53
+[0203]
+Games = 25
+Wins = 10
+WinRate = 40.0
+
+[1040]
+Games = 11
+Wins = 3
+WinRate = 42.857142857142854
+
+[0104]
+Games = 14
+Wins = 6
+WinRate = 50.0
+
+[2030]
+Games = 16
+Wins = 8
+WinRate = 50.0
+
+[5000]
+Games = 1
+Wins = 1
+WinRate = 100.0
+
+[0050]
+Games = 1
+Wins = 1
+WinRate = 100.0
+
+[0005]
+Games = 3
+Wins = 1
+WinRate = 100.0
+
+[0500]
+Games = 0
+Wins = 0
+WinRate = 0
 
